Add CSS class to img element

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- Image  -->
       <div class="row">
         <div class="col-6 offset-3">
-          <img id="js-insert-img" class="img-fluid  max-img-height" src="./assets/images/stock-img.jpg">
+          <img id="js-insert-img" class="img-fluid img-height" src="./assets/images/stock-img.jpg">
         </div>
       </div>
 
