Add elements to display id names on page, visual aid

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <!-- Image  -->
       <div class="row">
         <div class="col-6 offset-3">
+          <span class="js-id" style="background-color: grey; padding: 3px;">js-insert-img</span>
           <img id="js-insert-img" class="img-fluid img-height" src="./assets/images/stock-img.jpg">
         </div>
       </div>
@@ -58,6 +59,7 @@
           <!-- Nested Row 2 -->
           <div class="row">
             <div class="col">
+              <p class="mb-0 js-id">js-hangman-word</p>
               <p class="h1">
                 <span id="js-hangman-word">W O L F G _ N G</span>
               </p>
@@ -74,7 +76,7 @@
               <div class="row">
                 <div class="col">
                   <p>
-                    <span id="js-guesses-remaining">10</span>
+                    <span id="js-guesses-remaining"><span class="js-id">js-guesses-remaining</span><br>10</span>
                   </p>
                 </div>
               </div>
@@ -95,7 +97,7 @@
           <div class="row">
             <div class="col">
               <p>
-                <span id="js-letters-guessed">A, B, C, D...</span>
+                <span id="js-letters-guessed"><span class="js-id">js-letters-guessed</span><br>A, B, C, D...</span>
               </p>
             </div>
           </div>
@@ -116,7 +118,7 @@
           <div class="row">
             <div class="col">
               <p>
-                <span id="js-win-count">0</span>
+                <span id="js-win-count"><span class="js-id">js-win-count</span><br>0</span>
               </p>
             </div>
           </div>
@@ -131,7 +133,7 @@
           <div class="row">
             <div class="col">
               <p>
-                <span id="js-loss-count">0</span>
+                <span id="js-loss-count"><span class="js-id">js-loss-count</span><br>0</span>
               </p>
             </div>
           </div>
