Move id name spans outside of spans to be changed

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             <div class="row">
               <div class="col">
                 <p>
-                  <span id="js-guesses-remaining"><span class="js-id">js-guesses-remaining</span><br>10</span>
+                  <span class="js-id">js-guesses-remaining</span><br>
+                  <span id="js-guesses-remaining">10</span>
                 </p>
               </div>
             </div>
@@ -102,7 +103,8 @@
         <div class="row">
           <div class="col">
             <p>
-              <span id="js-letters-guessed"><span class="js-id">js-letters-guessed</span><br>A, B, C, D...</span>
+              <span class="js-id">js-letters-guessed</span><br>
+              <span id="js-letters-guessed">A, B, C, D...</span>
             </p>
           </div>
         </div>
@@ -123,7 +125,8 @@
         <div class="row">
           <div class="col">
             <p>
-              <span id="js-win-count"><span class="js-id">js-win-count</span><br>0</span>
+              <span class="js-id">js-win-count</span><br>
+              <span id="js-win-count">0</span>
             </p>
           </div>
         </div>
@@ -137,7 +140,8 @@
         <div class="row">
           <div class="col">
             <p>
-              <span id="js-loss-count"><span class="js-id">js-loss-count</span><br>0</span>
+              <span class="js-id">js-loss-count</span><br>
+              <span id="js-loss-count">0</span>
             </p>
           </div>
         </div>
