Add bg img, font import

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-6 offset-3">
         <span class="js-id" style="background-color: grey; padding: 3px;">js-insert-img</span>
-        <img id="js-insert-img" class="img-fluid img-height" src="./assets/images/stock-img.jpg">
+        <img id="js-insert-img" class="img-fluid img-height" src="./assets/images/piano.jpg" alt="Picture of piano">
       </div>
     </div> <!-- End 'Image' row -->
 
@@ -78,7 +78,7 @@
               <div class="col">
                 <p>
                   <span class="js-id">js-guesses-remaining</span><br>
-                  <span id="js-guesses-remaining">10</span>
+                  <span id="js-guesses-remaining">X</span>
                 </p>
               </div>
             </div>
