Add link to source code

--- a/index.html
+++ b/index.html
@@ -107,11 +107,16 @@
           </div> <!-- End 'Letters guessed' title -->
         </div> <!-- End 'Letters guessed' containing row -->
 
+        <div class="row">
+          <div class="col">
+            <a href="https://github.com/BenRGarcia/Hangman-Game" target="_blank">
+              <span>View Source Code</span>
+            </a>
+          </div>
+        </div>
 
-
-      </div>
-    </div> <!-- End div for styling purposes -->
-
+      </div> <!-- End Main Column -->
+    </div> <!-- End Main Row -->
   </div> <!-- End 'Page Container' -->
 
   <!-- Optional JavaScript -->
